# Education

coursework/01 - life/: Life.sln
coursework/01 - life/Life/: Life.cpp  Life.vcxproj  Life.vcxproj.filters  nucleus.h  nucleusl.cpp  space.cpp  space.h  universe.cpp  universe.h  Вселенная (тестовые данные).xlsx
coursework/02 - race simulator/vehicle/: Название сущностей проекта.txt
coursework/03 - ini parser/: ini_parser.cpp  ini_parser.sln  ini_parser.vcxproj  ini_parser.vcxproj.filters  my_numeric.h  my_parser.h  my_types.h  my_utilities.h  test_1.ini  test_2.ini
coursework/03 - ini parser/doc/: basic_information.txt
coursework/03 - ini parser/include/: my_numeric.h  my_parser.h  my_types.h
coursework/03 - ini parser/ini/: test.ini  test_2.ini
coursework/03 - ini parser/ini parser/: ini parser.sln
coursework/03 - ini parser/ini parser/ini parser/: ini parser.cpp  ini parser.vcxproj  ini parser.vcxproj.filters
coursework/03 - ini parser/src/: my_parser.cpp
coursework/04 - long arithmetic/: long_arithmetic.cpp  long_arithmetic.sln  long_arithmetic.vcxproj.filters
coursework/04 - long arithmetic/docs/: copies.txt  notes.txt
coursework/04 - long arithmetic/includes/: my_test.h  my_types.h  my_ultralong.h  my_ultralong_ext.h  my_utilities.h
coursework/04 - long arithmetic/long_arithmetic/: long_arithmetic.cpp  long_arithmetic.vcxproj
coursework/04 - long arithmetic/long_arithmetic/includes/: my_test.h  my_types.h  my_ultralong_ext.h
coursework/05 - thread safe queue/: thread_safe_queue.cpp  thread_safe_queue.sln  thread_safe_queue.vcxproj  thread_safe_queue.vcxproj.filters  Курсовой проект.docx
coursework/05 - thread safe queue/includes/: safe_queue.h  thread_pool.h
coursework/06 - airport inspector/: CMakeLists.txt  airport_inspector_driver.cpp  airport_inspector_driver.h  airport_inspector_viewer.cpp  airport_inspector_viewer.h  airport_inspector_viewer.ui  cpp.hint  main.cpp
includes/: my_algorithms.h
semester_01/session_01/homework_01_03/homework_01_03_01_A/: homework_01_03_01_A.sln
semester_01/session_01/homework_01_03/homework_01_03_01_B/: homework_01_03_01_B.sln
semester_01/session_01/homework_01_03/homework_01_03_02/: homework_01_03_02.sln
semester_01/session_01/homework_01_03/homework_01_03_03_A/: homework_01_03_03_A.sln
semester_01/session_01/homework_01_03/homework_01_03_03_B/: homework_01_03_03_B.sln
semester_01/session_01/homework_01_04/homework_01_04_01/: homework_01_04_01.sln
semester_01/session_01/homework_01_04/homework_01_04_02/: homework_01_04_02.sln
semester_01/session_01/homework_01_04/homework_01_04_03/: homework_01_04_03.sln
semester_01/session_01/homework_01_05/homework_01_05_01/: homework_01_05_01.sln
semester_01/session_01/homework_01_05/homework_01_05_02/: homework_01_05_02.sln
semester_01/session_01/homework_01_05/homework_01_05_03/: homework_01_05_03.sln
semester_01/session_01/homework_01_05/homework_01_05_04/: homework_01_05_04.sln
semester_01/session_01/homework_01_06/homework_01_06_01/: homework_01_06_01.sln
semester_01/session_01/homework_01_06/homework_01_06_02/: homework_01_06_02.sln
semester_01/session_01/homework_01_06/homework_01_06_03/: homework_01_06_03.sln
semester_01/session_01/homework_01_07/homework_01_07_01/: homework_01_07_01.sln
semester_01/session_01/homework_01_07/homework_01_07_02/: homework_01_07_02.sln
semester_01/session_01/homework_01_08/homework_01_08_01/: homework_01_08_01.sln
semester_01/session_01/homework_01_08/homework_01_08_02/: homework_01_08_02.sln
semester_01/session_01/homework_01_09/homework_01_09_01/: homework_01_09_01.sln
semester_01/session_01/homework_01_09/homework_01_09_02/: homework_01_09_02.sln
semester_01/session_01/homework_01_09/homework_01_09_03/: homework_01_09_03.sln
semester_01/session_01/homework_01_10/homework_01_10_01/: homework_01_10_01.sln
semester_01/session_01/homework_01_10/homework_01_10_02_A/: homework_01_10_02_A.sln
semester_01/session_01/homework_01_10/homework_01_10_02_B/: homework_01_10_02_B.sln
semester_01/session_01/homework_01_10/homework_01_10_02_C/: homework_01_10_02_C.sln
semester_01/session_01/homework_01_10/homework_01_10_03_A/: homework_01_10_03_A.sln
semester_01/session_01/homework_01_10/homework_01_10_03_B/: homework_01_10_03_B.sln
semester_01/session_03/includes/: array.h  array_iterator.h  array_smart.h  utilities.h
semester_01/session_04/includes/: my_memory.h  my_vector.h
semester_02/session_05/homework_05_04/advanced_data_extraction/: CMakeLists.txt  advanced_data_extraction.cpp
semester_02/session_05/homework_05_04/advanced_data_extraction/docs/: notes.txt
semester_02/session_05/homework_05_04/advanced_data_extraction/includes/: contact.h  my_ascii.h  my_input.h  my_utilities.h  phone_book.h  simple_db_viewer.h  types.h
semester_02/session_05/homework_05_04/advanced_data_extraction/src/: contact.cpp  my_utilities.cpp  phone_book.cpp  simple_db_viewer.cpp  types.cpp
semester_02/session_08/homework_02/first_console_app_Qt/: CMakeLists.txt  main.cpp
semester_02/session_08/homework_04/widgets/: cpp.hint  (+4 more)
semester_02/session_08/homework_08/08_PreDataBase/: CMakeLists.txt  CMakeUserPresets.json  cpp.hint  database.cpp  database.h  db_connect.cpp  db_connect.h  db_connect.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  Текущие _вопросы.txt
semester_02/session_08/homework_10/client_server/: CMakeLists.txt  CMakeUserPresets.json
semester_02/session_08/homework_10/client_server/common/: inout.h  protocol.h
semester_02/session_08/homework_10/client_server/logger/: handler.h  handlers.h  logger.h
semester_02/session_08/homework_10/client_server/tcp_client/: CMakeLists.txt  CMakeUserPresets.json  cpp.hint  main.cpp  mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
semester_02/session_08/homework_10/client_server/tcp_server/: CMakeLists.txt  main.cpp  tcpserver.cpp  tcpserver.h
semester_02/session_09/homework_02/: Кратко о... .txt
semester_02/session_10/FirstProject/: FirstProject.uproject
semester_02/session_10/LeaveMeAlone/: LeaveMeAlone.uproject
(+967 files in other folders)
